# ACG

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_NEXT_TASKS.md  CODEX_AUDIT_MARSHMALLOW_PROMPT.md  CODEX_FIX_PROMPT.md  HANDOFF.md  HANDOFF_GPT55.md  HANDOFF_NEXT.md  LICENSE  Makefile  PAPER_NUMBERS_CLEAN.md  README.md  package-lock.json  package.json  probe_predictor_tests.py  probe_thinking.py  pyproject.toml  summon-the-explorer-subagne-keen-walrus.md  test_5.py  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: acg-guard.sh
.github/workflows/: ci.yml
.windsurf/: hooks.json
acg/: __init__.py  analyze.py  apply_patch_adapter.py  cli.py  compiler.py  correctness.py  diff.py  enforce.py  explain.py  llm.py  orchestrator.py  perf.py  predictor.py  repo_graph.py  report.py  runtime.py  runtime_proposal.py  schema.py  solver.py  stdio_live.py  typecheck.py
acg/index/: __init__.py  aggregate.py  bm25.py  cochange.py  embeddings.py  framework.py  scip.py  (+3 more)
benchmark/: README.md  baselines.py  plot_results.py  predictor_eval.py  results.json  runner.py
demo-app/: agent_lock.json  components.json  jest.config.cjs  package-lock.json  package.json  tasks.json
docs/: APPLY_AND_TEST.md  ARCHITECTURE.md  ASUS_DEPLOYMENT.md  CASCADE_INTEGRATION.md  CITATIONS.md  CLAUDE_CODE_INTEGRATION.md  COGNITION_INTEGRATION.md  HOOKS_VERIFICATION.md  MCP_SERVER.md  STARLETTE_TOPUP_AUDIT_HANDOFF.md  STARLETTE_TOPUP_AUDIT_RESPONSE.md  acg_pipeline_figure.tex  acg_pipeline_figure_standalone.tex  collision_vs_parallelism.json  defense_brief.md  parallelism_sweep_brocoders.json  system_design.md
examples/: lockfile.dag.example.json  lockfile.simple.example.json
experiments/: LANE_M_DONE.md  LANE_N_DONE.md  LANE_Q_DONE.md  LANE_S_DONE.md  LIMITATIONS_RECALL.md  N_CLEANUP_LOG.md  PAPER_NUMBERS.md  PAPER_NUMBERS_DONE.md  ROUND3_ORCHESTRATOR_SUMMARY.md
graph_builder/: package-lock.json  package.json  scan.ts  scan_java.py  scan_python.py
landing/: .gitignore  index.html  package.json
mermaid-figures/: theme.json
pitch/: index.html
schema/: agent_lock.schema.json  perf_trace.schema.json  run_trace.schema.json
scripts/: claude_precheck_write.py  postcheck_write.sh  precheck_write.sh
src/: cli.ts
tests/: acg-cli.test.ts  conftest.py  test_aggregate.py  test_analyze.py  test_applied_diff_live.py  test_apply_patch_adapter.py  test_benchmark_baselines.py  test_benchmark_python.py  test_claude_precheck_write.py  test_cli.py  test_compile.py  test_compiler.py  test_compute_fail_to_pass_parsers.py  test_correctness.py  test_devin_api.py  test_diff.py  test_enforce.py  test_fail_to_pass_scoring.py  test_graph_expansion_eval.py  test_greenhouse_eval.py  test_headtohead.py  test_llm_usage_tracking.py  test_mcp.py  test_orchestrator.py  test_perf.py  test_postcheck_write_script.py  test_precheck_write_script.py  test_predictor.py  test_python_fastapi_experiment.py  test_realworld_artifact_metadata.py  test_repo_graph.py  test_runtime.py  test_runtime_extras.py  test_runtime_proposal_status.py  test_scan_java.py  test_scan_python.py  test_schema.py  test_scip_localization.py  test_single_agent_envelope.py  test_solver.py  (+2 more)
viz/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
(+1703 files in other folders)
