[project]
name = "acg"
version = "0.1.0"
description = "Agent Context Graph — pre-flight write contract compiler for multi-agent code workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shashank" },
  { name = "Prajit" },
]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.22,<5.0",
  "networkx>=3.3,<4.0",
  "matplotlib>=3.9,<4.0",
  "rich>=13.7,<14.0",
  "python-dotenv>=1.0,<2.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.5,<1.0"]
# MCP server (FastMCP) and Agentverse (uagents-adapter) wrappers are roadmap
# items; see docs/COGNITION_INTEGRATION.md for the planned tool surface.

[project.scripts]
acg = "acg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
  "smoke: marks tests that hit a real LLM endpoint (deselect with -m 'not smoke')",
]
