[project]
name = "acg"
version = "0.1.0"
description = "Agent Context Graph — pre-flight write contract compiler for multi-agent code workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shashank" },
  { name = "Prajit" },
]
dependencies = [
  "codex-apply-patch>=0.4,<0.5",
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.22,<5.0",
  "networkx>=3.3,<4.0",
  "rank-bm25>=0.2.2",
  "rapidfuzz>=3.6",
  "matplotlib>=3.9,<4.0",
  "rich>=13.7,<14.0",
  # tree-sitter-languages 1.10.x is built against the legacy tree-sitter ABI;
  # newer tree-sitter releases (>=0.22) drop the path-based Language constructor
  # tree-sitter-languages still calls. Pin until tree-sitter-languages catches up.
  "tree-sitter>=0.21,<0.22",
  "tree-sitter-languages>=1.10,<2.0",
  "python-dotenv>=1.0,<2.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.5,<1.0"]
mcp = ["fastmcp>=2.0,<3.0"]
index-vector = [
    "sentence-transformers>=2.7,<3.0",
    "numpy>=1.26,<3.0",
]
# MCP server (FastMCP) is shipped under the `mcp` extra; the local-embeddings
# indexer ships under the `index-vector` extra. See `docs/MCP_SERVER.md` and
# `docs/plans/acg-index-rewrite.md`.

[project.scripts]
acg = "acg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
# Upstream checkouts under experiments/real_repos/*/checkout/ ship their own
# tests; collecting the whole repo would pick those up and fail (missing deps,
# conftest name clashes). Default `pytest` with no args = project tests only.
testpaths = ["tests"]
markers = [
  "smoke: marks tests that hit a real LLM endpoint (deselect with -m 'not smoke')",
]
